--- a/web/current/welcome.html
+++ b/web/current/welcome.html
@@ -19,7 +19,23 @@ window.addEventListener('load', function(e) {
   }, false);
 </script>
 
-<body>
+<script>
+function initialize_disaster_session()
+{
+	// TODO: Check to see if there are any elements in local storage already to deal with.
+	//		 Present the user with a screen to address those.
+
+	// Check to see if a disaster reporting key incrementor exists - if not, set it at zero.
+	if(localStorage.getItem("disasterKey") == null)
+	localStorage.setItem("disasterKey", "0");
+
+	// Add the volunteer User ID and Name to local storage
+	localStorage.setItem("volunteer_id", "1"); // TODO: Get this from LogIn
+	localStorage.setItem("volunteer_name", "Test Volunteer"); // TODO: Get this from LogIn
+}
+</script>
+
+<body onLoad="initialize_disaster_session()">
 	
 <div data-role="page">
 	
@@ -38,7 +54,7 @@ window.addEventListener('load', function(e) {
 			<div class='mainlink_subtitle'>a disaster assessment</div>
 	</a>
 	
-	<a href='sync.html' data-role="button" data-icon="arrow-r" data-iconpos="right">
+	<a href='system_sync_status.html' data-role="button" data-icon="arrow-r" data-iconpos="right">
 			<div class='mainlink_big_head'>Review</div>
 			<div class='mainlink_subtitle'>assessments you've<br />already completed</div>
 	</a>
