fixing to add square brackets

--- a/web/system_sync_status.html
+++ b/web/system_sync_status.html
@@ -63,7 +63,7 @@ function getAllItems() {
 	}
 	
 	document.getElementById("records").style.display = "block";
-	document.getElementById("json_records").value = document.getElementById("json_records").value + "}";
+	document.getElementById("json_records").value = document.getElementById("json_records").value + "]";
 }
 
 function writeLocalRecord(obj)
@@ -80,7 +80,7 @@ function writeLocalRecord(obj)
 	if (currentFormHTML != "" && currentFormHTML != null)
 		currentFormHTML += ", "; // Add a comma separator for the next JSON record
 	else
-		currentFormHTML = "{"; 
+		currentFormHTML = "["; 
 		
 	var newFormHTML = JSON.stringify(obj);
 	
